cmake_minimum_required(VERSION 3.10)
project(Homework_10.1)
add_executable(cmake-demo Homework_5.1 Equilateral_triangle.cpp Equilateral_triangle.h Figure.cpp Figure.h Isosceles_triangle.cpp Isosceles_triangle.h Parallelogram.cpp 
Parallelogram.h Quadrangle.cpp Quadrangle.h Rectangle_Q.h Rectangle_Q.cpp Rhombus.h Rhombus.cpp Right_triangle.h Right_triangle.cpp square.h square.cpp Triangle.h Triangle.cpp)